[project]
name = "test"
version = "0.1.0"
description = "versionfor testing"
authors = [
    {name = "Finn",email = "finnchristian.kenter@stud.th-rosenheim.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
